--- a/CoreDataExample/CoreDataExampleTests/CoreDataExampleTests-Info.plist
+++ b/CoreDataExample/CoreDataExampleTests/CoreDataExampleTests-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.--PRODUCT-NAME-rfc1034identifier-.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.mobile.examples.coredataexample</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
