--- a/CoreDataExample/CoreDataExample/CoreDataExample-Info.plist
+++ b/CoreDataExample/CoreDataExample/CoreDataExample-Info.plist
@@ -36,5 +36,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMainNibFile</key>
+	<string>Window</string>
 </dict>
 </plist>
